<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://gitee.com/oyzh1994/fx-base</url>
        <connection>scm:git:https://gitee.com/oyzh1994/fx-base</connection>
        <developerConnection>scm:git:https://gitee.com/oyzh1994/fx-base</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>oyzh</id>
            <name>oyzh</name>
            <email>1987803602@qq.com</email>
        </developer>
    </developers>
    <!-- 项目主页 -->
    <url>https://gitee.com/oyzh1994/fx-base</url>

    <parent>
        <groupId>io.github.oyzh1994</groupId>
        <artifactId>base</artifactId>
        <version>1.0.3</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <name>fx-base</name>
    <artifactId>fx-base</artifactId>
    <description>javafx各种基础功能的实现</description>
    <version>1.3.7</version>
    <packaging>pom</packaging>
    <modules>
        <module>fx-pkg</module>
        <module>fx-plus</module>
        <module>fx-rich</module>
        <module>fx-editor</module>
        <module>fx-terminal</module>
    </modules>

    <properties>
        <hutool.version>5.8.41</hutool.version>
        <fx-base.version>1.3.7</fx-base.version>
        <tm4java.version>1.0.0</tm4java.version>
        <javafx.version>27-ea+21</javafx.version>
        <!-- <javafx.version>26.0.1</javafx.version> -->
        <!-- <javafx.version>25.0.3</javafx.version> -->
        <jspecify.version>1.0.0</jspecify.version>
        <snakeyaml.version>2.5</snakeyaml.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <tm4javafx.version>0.1.0</tm4javafx.version>
        <richtextfx.version>0.11.6</richtextfx.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
        <!--        <rsyntaxtextarea.version>3.6.0</rsyntaxtextarea.version>-->
    </properties>

    <!-- 声明仓库 -->
    <repositories>
        <!-- <repository> -->
        <!--     <id>aliyun-intellij</id> -->
        <!--     <name>aliyun-intellij</name> -->
        <!--     <url>https://maven.aliyun.com/repository/jetbrains/</url> -->
        <!--     <releases> -->
        <!--         <enabled>true</enabled> -->
        <!--     </releases> -->
        <!--     <snapshots> -->
        <!--         <enabled>true</enabled> -->
        <!--     </snapshots> -->
        <!-- </repository> -->
        <repository>
            <id>center</id>
            <name>center</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public/</url>
        </repository>
        <repository>
            <id>tencent</id>
            <name>tencent</name>
            <url>https://mirrors.tencent.com/nexus/repository/maven-public/</url>
        </repository>
        <!-- <repository> -->
        <!--     <id>jetbrains</id> -->
        <!--     <name>jetbrains</name> -->
        <!--     <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies/</url> -->
        <!-- </repository> -->
        <!-- <repository> -->
        <!--     <id>sonatype</id> -->
        <!--     <name>sonatype</name> -->
        <!--     <url>https://oss.sonatype.org/content/groups/public/</url> -->
        <!-- </repository> -->
    </repositories>

    <build>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <debug>false</debug>
                    <debuglevel>none</debuglevel>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- 自定义类库，fx增强 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>fx-plus</artifactId>
                <version>${fx-base.version}</version>
            </dependency>
            <!-- 自定义类库，终端相关 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>fx-terminal</artifactId>
                <version>${fx-base.version}</version>
            </dependency>
            <!-- 自定义类库，富文本相关 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>fx-rich</artifactId>
                <version>${fx-base.version}</version>
            </dependency>
            <!-- 自定义类库，编辑器相关 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>fx-editor</artifactId>
                <version>${fx-base.version}</version>
            </dependency>
            <!-- 打包工具 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>fx-pkg</artifactId>
                <version>${fx-base.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
